Add restricted blocklist observation history
